--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "cloudinary": "^1.28.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
